bug fix #18: Create XSL for scrolling Links web part #25: Center Web Part Zone does not align with other web part zones. #26: Remove Gray background from left and right web part zones (all web parts) - please change to white

--- a/sfpucBranding/sfpucBranding/Layouts/sfpucBranding/css/main.css
+++ b/sfpucBranding/sfpucBranding/Layouts/sfpucBranding/css/main.css
@@ -264,7 +264,7 @@ img#ctl00_onetidHeadbnnr2.ms-siteicon-img.SFPUCLogo{
 }
 .contentWraper {
 	min-height: 100%;
-    padding: 1em 0.5em;
+    /*padding: 1em 0.5em;*/
     margin: 1em auto;	
     width: 85%;
     /*border-radius: 5px;
@@ -596,6 +596,17 @@ div#topNav.SFPUCNavigation div#zz1_TopNavigationMenu.align-right ul ul > li.has-
   border-left-color: transparent;
   border-right-color: #1c89b5;
 }
+
+
+.cell-margin {
+  margin: 0px 0px 5px 0px !important;
+}
+.tableCol-50 {
+    display: block;
+  min-width: inherit;
+}
+
+
 /* TODO for small width
 @media all and (max-width: 768px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
   div#topNav.SFPUCNavigation {
@@ -777,7 +788,9 @@ div#topNav.SFPUCNavigation div#zz1_TopNavigationMenu.align-right ul ul > li.has-
 	border: solid 0 #B6B7B7;*/
 }
 .ITSmainContentWraper {
-	width: 57%;
+	/*width: 57%;*/
+    max-width: 57%;
+  overflow: hidden;
 	height: 100%;
 	padding: 0 0.5em;
 	/*padding: 0.3em;
@@ -791,7 +804,7 @@ div#topNav.SFPUCNavigation div#zz1_TopNavigationMenu.align-right ul ul > li.has-
 	background: #fff;
 }
 .ITSmainContentWraper .ms-rtestate-field {
-	line-height: 0;
+	/*line-height: 0;*/
 }
 .ITSrightColumnWraper {
 	float: right;
@@ -905,7 +918,7 @@ div[id^="WebPartWPQ"] table td[id^="scriptWPQ"] table{
 
 /* Announcements web part */
 div[id^="WebPartWPQ"] {
-	background: #DCDCDC;
+	/*background: #DCDCDC;*/
 }
 .announcements {
 	width: 90%;
